# agify

./: .gitignore  MANIFEST.in  README.md  agify.py  setup.cfg
.github/workflows/: publish.yml
agify/: wrappers.py
