[metadata]
name = agify
version = 0.1.0
author = Beksultan Artykbaev
author_email = artykbaev2010@gmail.com
description = A simple API wrapper for predicting the age, gender, and country of a person by their name.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Vazno/agify
classifiers =
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: General
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Typing :: Typed
    Programming Language :: Python :: 3
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data = True